--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -232,6 +232,18 @@ figure {
   }
 }
 
+/* Custom alignment for images with #left */
+img[src*="#left"] {
+  float: left;
+  margin: 0 1em 1em 0;
+}
+
+/* Custom alignment for images with #right */
+img[src*="#right"] {
+  float: right;
+  margin: 0 1em 0 1em;
+}
+
 /* Figure captions */
 
 figcaption {
